--- a/css/style.css
+++ b/css/style.css
@@ -31,51 +31,45 @@
   padding: 20px;
 }
 
-.footeritem {
+.pull-left {
+  padding: 10px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
-.listend {
+.footer-title {
+  font-size: 18px;
+  color: #ffdcff;
+}
+
+.footer-address {
+  padding-top: 30px;
   color: white;
-  font-size: 20px;
-  text-decoration: underline;
 }
 
-.item-list-first {
-  margin-top: 10px;
-  padding: 5px;
+.phone {
   text-decoration: none;
-  list-style: none;
   color: white;
 }
-
-.item-list-first a {
-  text-decoration: none;
-  list-style: none;
-  color: white;
-}
-.item-list-first ahover {
-  text-decoration: underline;
+.phone:hover {
   color: #FFC2FF;
 }
 
-.item-list-two {
-  margin-top: 10px;
-  padding: 5px;
-  text-decoration: none;
-  list-style: none;
-  color: white;
+.pull-rigth {
+  padding: 10px;
+  display: flex;
+  justify-content: flex-end;
 }
 
-.item-list-two a {
+.icon {
+  padding-inline-start: 20px;
+  font-size: 30px;
   text-decoration: none;
-  list-style: none;
-  color: white;
+  color: #ffdcff;
 }
-.item-list-two ahover {
-  text-decoration: underline;
+.icon:hover {
   color: #FFC2FF;
+  text-shadow: #fff5ff 1px 1px 3px;
 }
 
 /* MIXIN */
@@ -92,7 +86,7 @@
 
 .carouselbox {
   margin: 20px;
-  border: #FFC2FF 2px solid;
+  border: #ffdcff 2px solid !important;
 }
 
 .banner {
@@ -113,6 +107,10 @@
 }
 
 /* CARDS */
+.cardbox-index {
+  border: #ffdcff 2px solid !important;
+}
+
 .card-container {
   padding: 150px 20px;
 }
@@ -123,6 +121,7 @@
 }
 
 .boton-cards {
+  color: #660066 !important;
   background-color: #FFC2FF;
   margin: 12px;
   padding: 4px;
@@ -132,6 +131,7 @@
 }
 
 .boton-cards:hover {
+  color: white !important;
   background-color: #660066 !important;
   border: solid 1px #FFC2FF !important;
 }
@@ -170,19 +170,96 @@
 
 /* MIXIN */
 /* MIXIN */
-.instagram:hover {
-  color: #FF4747;
-  text-decoration: underline;
+.icon-socialmedia {
+  padding: 30px;
+  font-size: 120px;
+  text-decoration: none;
+  color: #ffa9ff;
+}
+.icon-socialmedia:hover {
+  color: #ff8fff;
+  text-shadow: #660066 1px 1px 3px;
 }
 
-.whatsapp:hover {
-  color: #77FF5C;
-  text-decoration: underline;
+form .grupo {
+  position: relative;
+  margin: 45px;
 }
 
-.gmail:hover {
-  color: #FFB65C;
-  text-decoration: underline;
+input, textarea {
+  background: none;
+  color: #660066;
+  font-size: 18px;
+  padding: 10px 10px 10px 5px;
+  display: block;
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid var(--colorTextos);
+  resize: none;
+}
+
+input:focus, textarea:focus {
+  outline: none;
+  color: #660066;
+}
+
+input:focus ~ label,
+input:valid ~ label,
+textarea:focus ~ label,
+textarea:valid ~ label {
+  position: absolute;
+  top: -14px;
+  font-size: 12px;
+  color: #ff8fff;
+}
+
+label {
+  color: var(--colorTextos);
+  font-size: 16px;
+  position: absolute;
+  left: 5px;
+  top: 10px;
+  transition: 0.5s ease all;
+  pointer-events: none;
+}
+
+input:focus ~ .barra::before, textarea:focus ~ .barra::before {
+  width: 100%;
+}
+
+.barra {
+  position: relative;
+  display: block;
+  width: 100%;
+}
+
+.barra::before {
+  content: "";
+  height: 2px;
+  width: 0%;
+  bottom: 0;
+  position: absolute;
+  background: linear-gradient(to right, #FFC2FF, #660066);
+  transition: 2s ease all;
+  left: 0%;
+}
+
+button {
+  background: #660066;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ffa9ff, #ff8fff);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #ffa9ff, #ff8fff);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  display: block;
+  width: 100px;
+  height: 40px;
+  border: none;
+  color: purple;
+  border-radius: 4px;
+  font-size: 16px;
+  margin: 10px auto;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
