--- a/scss/components/_socialmedia.scss
+++ b/scss/components/_socialmedia.scss
@@ -6,11 +6,19 @@
     padding: 30px;
     font-size: 120px;
     text-decoration: none;
-    color: darken($border-color, $amount: 5);
+    color: lighten($font-color, $amount: 5);
     &:hover {
-        color: darken($border-color, $amount: 10);
+        color: lighten($font-color, $amount: 10);
         text-shadow: $font-color 1px 1px 3px;
     }
+}
+
+.form {
+    align-items: center;
+}
+
+.contactus-h2 {
+    text-align: center;
 }
 
 form .grupo{
@@ -75,17 +83,14 @@ input:focus~.barra::before, textarea:focus~.barra::before{
     left: 0%;
 }
 button{
-    background: $font-color;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, darken($border-color, $amount: 5), darken($border-color, $amount: 10));
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, darken($border-color, $amount: 5), darken($border-color, $amount: 10));
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: lighten($font-color, $amount: 10);
+    background: -webkit-linear-gradient(to right, darken($font-color, $amount: 5), lighten($font-color, $amount: 10));
+    background: linear-gradient(to right, darken($font-color, $amount: 5), darken($font-color, $amount: 10));
     display: block;
     width: 100px;
     height: 40px;
     border:none;
-    color: lighten($font-color, $amount: 5); 
+    color: lighten($border-color, $amount: 5); 
     border-radius: 4px;
     font-size: 16px;
     margin: 10px auto;
