--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* MIXIN */
 /* HEADER */
 .headercontainer {
   background-color: #FFD6FF;
@@ -7,6 +6,17 @@
 
 .title {
   text-shadow: #660066 1px 1px;
+}
+
+.boton-header {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: flex-end !important;
+  color: #FF99FF !important;
+}
+
+.navbar-toggler-icon {
+  color: #FF99FF !important;
 }
 
 .nav-item {
@@ -20,7 +30,6 @@
   color: #FF99FF !important;
 }
 
-/* MIXIN */
 /* FOOTER */
 .footercontainer {
   background-color: #3D003D;
@@ -65,13 +74,20 @@
   text-decoration: none;
   list-style: none;
   color: #ffdcff;
+  -webkit-transition: all 1s;
+  -o-transition: all 1s;
+  -moz-transition: all 1s;
+  transition: all 1s;
 }
 .icon:hover {
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  transform: scale(1.2);
   color: #FFC2FF;
   text-shadow: #fff5ff 1px 1px 3px;
 }
 
-/* MIXIN */
 /* MIDSECTION */
 .section-central {
   padding: 40px;
@@ -86,6 +102,19 @@
 .carouselbox {
   margin: 20px;
   border: #ffdcff 2px solid !important;
+}
+
+.photo-carousel {
+  -webkit-transition: all 1s;
+  -o-transition: all 1s;
+  -moz-transition: all 1s;
+  transition: all 1s;
+}
+.photo-carousel:hover {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .carousel-title {
@@ -113,31 +142,35 @@
 
 /* NOSOTROS TITLE */
 .titlenosotros-container {
-  -webkit-transition: 2s;
-  -o-transition: 2s;
-  -moz-transition: 2s;
-  transition: 2s;
   margin-top: 40px;
   padding: 60px;
-}
-.titlenosotros-containerhover {
-  -webkit-transform: scale(2);
-  -moz-transform: scale(2);
-  -o-transform: scale(2);
-  transform: scale(2);
 }
 
 .nosotros-title {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #ff8fff;
-  text-shadow: black 1px 1px 3px;
+  color: purple;
+  text-shadow: #660066 1px 1px;
 }
 
 /* CARDS */
 .cardbox-index {
   border: #ffdcff 2px solid !important;
+}
+
+.photo-card {
+  -webkit-transition: all 1s;
+  -o-transition: all 1s;
+  -moz-transition: all 1s;
+  transition: all 1s;
+  border: #ffdcff 2px solid !important;
+}
+.photo-card:hover {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .card-aling {
@@ -164,15 +197,21 @@
   border: solid 1px #660066 !important;
   display: flex;
   justify-content: center;
+  -webkit-transition: all 1s;
+  -o-transition: all 1s;
+  -moz-transition: all 1s;
+  transition: all 1s;
 }
-
 .boton-cards:hover {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
   color: white !important;
   background-color: #660066 !important;
   border: solid 1px #FFC2FF !important;
 }
 
-/* MIXIN */
 /* CARDS Y TIENDA */
 .shop-card {
   padding: 30px;
@@ -204,19 +243,27 @@
   padding-top: 60px;
 }
 
-/* MIXIN */
-/* MIXIN */
+/* ICONOS DE REDES */
 .icon-socialmedia {
   padding: 30px;
   font-size: 120px;
   text-decoration: none;
   color: purple;
+  -webkit-transition: all 1.5s;
+  -o-transition: all 1.5s;
+  -moz-transition: all 1.5s;
+  transition: all 1.5s;
 }
 .icon-socialmedia:hover {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
   color: #990099;
   text-shadow: #660066 1px 1px 3px;
 }
 
+/* MAPA */
 .mapa {
   padding-top: 20px;
   display: flex;
@@ -224,6 +271,7 @@
   justify-content: center;
 }
 
+/* Contact form */
 .form {
   align-items: center;
 }
