--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -26,6 +26,7 @@
 .footer-title {
     font-size: 18px;
     color: lighten($border-color, $amount: 5);
+
 }
 
 .footer-address {
@@ -50,7 +51,12 @@
     font-size: 30px;
     @include decoration(none) ;
     color: lighten($border-color, $amount: 5);
+    @include transition(all 1s);
+    
+
+   
     &:hover {
+        @include transform(scale(1.2));
         color: $border-color;
         text-shadow: lighten($border-color, $amount: 10) 1px 1px 3px;
     }
